# ps

./: .gitignore  .pre-commit-config.yaml  .style.yapf  pyproject.toml
advent-of-code/2022/01/: solution1.py  solution2.py
advent-of-code/2022/02/: solution1.py  solution2.py
advent-of-code/2022/03/: solution1.py  solution2.py
advent-of-code/2022/04/: solution1.py  solution2.py
advent-of-code/2022/05/: hardcoded_source.txt  solution1.py  solution2.py
advent-of-code/2022/06/: solution1.py  solution2.py
advent-of-code/2022/07/: solution1.py  solution2.py
advent-of-code/2022/08/: solution1.py  solution2.py
advent-of-code/2022/09/: solution1.py  solution2.py
advent-of-code/2022/10/: solution1.py  solution2.py
advent-of-code/2022/11/: solution1.py  solution2.py
advent-of-code/2022/12/: solution1.py  solution2.py
advent-of-code/2022/13/: solution1.py  solution2.py
advent-of-code/2022/14/: solution1.py  solution2.py
advent-of-code/2022/15/: solution1.py  solution2.py
advent-of-code/2022/16/: solution1.py  solution2.py
advent-of-code/2022/17/: solution1.py  solution2.py
advent-of-code/2022/18/: solution1.py  solution2.py
advent-of-code/2022/19/: solution1.py  solution2.py
advent-of-code/2022/20/: solution1.py  solution2.py
advent-of-code/2022/21/: solution1.py  solution2.py
advent-of-code/2022/22/: solution1.py  solution2.py
advent-of-code/2022/23/: solution1.py  solution2.py
advent-of-code/2022/24/: solution1.py  solution2.py
advent-of-code/2022/25/: solution1.py
advent-of-code/2023/: .gitignore
advent-of-code/2023/01/: main.go
advent-of-code/2023/02/: main.go
advent-of-code/2023/03/: main.go
advent-of-code/2023/04/: go.mod  main.go
advent-of-code/2023/05/: main.go
advent-of-code/2023/06/: main.go
advent-of-code/2023/07/: main.go  parsing.go
advent-of-code/2023/08/: main.go  parsing.go
advent-of-code/2023/09/: main.go  parsing.go
advent-of-code/2023/10/: main.go  parsing.go
advent-of-code/2023/11/: main.go  parsing.go
advent-of-code/2023/12/: main.go  parsing.go
advent-of-code/2023/13/: go.mod  main.go  parsing.go
advent-of-code/2023/14/: main.go  parsing.go
advent-of-code/2023/15/: main.go  parsing.go
advent-of-code/2023/16/: main.go
advent-of-code/2023/17/: main.go  parsing.go
advent-of-code/2023/18/: main.go  parsing.go
advent-of-code/2023/19/: main.go  parsing.go
advent-of-code/2023/20/: main.go  parsing.go
advent-of-code/2023/21/: main.go  parsing.go
advent-of-code/2023/22/: main.go  parsing.go
advent-of-code/2023/23/: main.go
advent-of-code/2023/24/: go.mod  main.go  parsing.go
advent-of-code/2023/25/: main.go  parsing.go
advent-of-code/2023/util/: grid.go  parts.go  util.go
advent-of-code/2024/01/: main.go  parsing.go
advent-of-code/2024/02/: main.go  parsing.go
advent-of-code/2024/03/: main.go
advent-of-code/2024/04/: main.go
advent-of-code/2024/05/: go.mod  main.go  parsing.go
advent-of-code/2024/06/: main.go  parsing.go
advent-of-code/2024/07/: main.go  parsing.go
advent-of-code/2024/08/: main.go
advent-of-code/2024/09/: main.go  parsing.go
advent-of-code/2024/10/: main.go  parsing.go
advent-of-code/2024/11/: main.go
advent-of-code/2024/12/: main.go  parsing.go
advent-of-code/2024/13/: go.mod  main.go  parsing.go
advent-of-code/2024/14/: main.go  parsing.go
advent-of-code/2024/15/: main.go  parsing.go
advent-of-code/2025/: .bazelrc  BUILD.bazel  MODULE.bazel  main.cc
advent-of-code/2025/days/: BUILD.bazel  day01.cc  day01.hh  day02.cc  day02.hh  day03.cc  day03.hh  day04.cc  day04.hh  day05.cc  day05.hh  day06.cc  day06.hh  day07.cc  day07.hh  day08.cc  day08.hh  day09.cc  day09.hh
advent-of-code/2025/util/: BUILD.bazel  grid.cc  grid.hh  init.cc  init.hh  parts.cc  parts.hh
advent-of-code/aoc/: Cargo.toml  README.md
advent-of-code/aoc/src/: cli.rs  config.rs  main.rs  pull.rs
leetcode-contests/weekly-312/: 1.py  2.py  3.py  4.py
leetcode-contests/weekly-313/: 1.py  2.py  3.py  4.py
leetcode-contests/weekly-314/: 1.py  2.py  3.py  4.py
leetcode-contests/weekly-315/: 1.py  2.py  3.py  4.py
leetcode-contests/weekly-316/: 1.py  2.py  3.py  4.py
leetcode-contests/weekly-317/: 1.py  2.py  3.py  4.py
leetcode-contests/weekly-318/: 1.py  2.py  3.py  4.py
leetcode-contests/weekly-319/: 1.py  2.py  3.py  4.py
leetcode-contests/weekly-320/: 1.py  2.py  3.py  4.py
leetcode-contests/weekly-322/: 1.py  2.py  3.py  4.py
leetcode-contests/weekly-323/: 1.py  2.py  3.py  4.py
leetcode-contests/weekly-324/: 1.py  2.py  3.py  4.py
leetcode-contests/weekly-329/: 1.py  2.py  3.py  4.py
leetcode-contests/weekly-330/: 1.py  2.py  3.py  4.py
leetcode-contests/weekly-331/: 1.py  2.py  3.py  4.py
leetcode-contests/weekly-332/: 1.py  2.py  3.py  4.py
leetcode-contests/weekly-333/: 1.py  2.py  3.py  4.py
leetcode-contests/weekly-334/: 1.py  2.py  3.py  4.py
leetcode-contests/weekly-335/: 1.py  2.py  3.py  4.py
leetcode-contests/weekly-336/: 1.py  2.py  3.py  4.py
leetcode-contests/weekly-337/: 1.py  2.py  3.py  4.py
leetcode-contests/weekly-338/: 1.py  2.py  3.py  4.py
leetcode-contests/weekly-339/: 1.py  2.py  3.py  4.py
leetcode-contests/weekly-340/: 1.py  2.py  3.py  4.py
leetcode-contests/weekly-341/: 1.py  2.py  3.py  4.py
leetcode-contests/weekly-342/: 1.py  2.py  3.py  4.py
leetcode-contests/weekly-343/: 1.py  2.py  3.py  4.py
leetcode-contests/weekly-344/: 1.py  2.py  3.py  4.py
leetcode-contests/weekly-345/: 1.py  2.py  3.py  4.py
leetcode-contests/weekly-346/: 1.py  2.py  3.py  4.py
leetcode-contests/weekly-347/: 1.py  2.py  3.py  4.py
leetcode-contests/weekly-348/: 1.py  2.py  3.py  4.py
leetcode-contests/weekly-349/: 1.py  2.py  3.py  4.py
leetcode-contests/weekly-351/: 1.py  2.py  3.py  4.py
leetcode-contests/weekly-353/: 1.py  2.py  3.py  4.py
leetcode-contests/weekly-354/: 1.py  2.py  3.py  4.py
leetcode-contests/weekly-355/: 1.py  2.py  3.py  4.py
scripts/: advent-of-code.sh  leetcode-contest.sh  yapf.sh
scripts/pre-commit/: buildifier.sh  problem_number.sh  yapf.sh
(+23 files in other folders)
