[tool.poetry]
name = "cp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
yapf = "^0.32.0"
pre-commit = "^2.20.0"

[tool.yapf]
based_on_style = "google"
blank_line_before_nested_class_or_def = false
indent_width = 2

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
