load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")
load("@rules_cc//cc:cc_binary.bzl", "cc_binary")

cc_binary(
    name = "main",
    srcs = ["main.cc"],
    deps = [
        "//days:day01",
        # "//days:day02",
        # "//days:day03",
        # "//days:day04",
        # "//days:day05",
        # "//days:day06",
        # "//days:day07",
        # "//days:day08",
        # "//days:day09",
        # "//days:day10",
        # "//days:day11",
        # "//days:day12",
        "//util:init",
        "//util:parts",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/strings",
    ],
)

refresh_compile_commands(
    name = "refresh_compile_commands",
)
