[package]
name = "aoc"
version = "0.1.1"
edition = "2021"
description = "A CLI tool to pull Advent of Code inputs"
license = "MIT"
repository = "https://github.com/feefs/ps"
keywords = ["cli"]
categories = ["command-line-utilities"]

[dependencies]
ansi_term = "0.12.1"
chrono = "0.4.42"
chrono-tz = "0.10.4"
clap = { version = "4.5.50", features = ["derive"] }
eyre = "0.6.12"
inquire = "0.9.1"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
ureq = "3.1.2"
xdg = "3.0.0"

[lints.rust]
unused_crate_dependencies = "deny"
[lints.clippy]
cargo = "warn"
pedantic = "warn"
multiple_crate_versions  = { level = "allow", priority = 1 }
