load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//:__pkg__"])

cc_library(
    name = "init",
    srcs = ["init.cc"],
    hdrs = ["init.hh"],
    deps = [
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/flags:usage",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:globals",
        "@abseil-cpp//absl/log:initialize",
        "@abseil-cpp//absl/strings",
    ],
)

cc_library(
    name = "parts",
    srcs = ["parts.cc"],
    hdrs = ["parts.hh"],
    deps = [
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings",
    ],
)

cc_library(
    name = "grid",
    srcs = ["grid.cc"],
    hdrs = ["grid.hh"],
    visibility = ["//days:__pkg__"],
    deps = [
        "@abseil-cpp//absl/memory",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
    ],
)
